feat(projects): 增加 getShoppingCart.js接口
